--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-      <img src="images/rachel-phenix.jpg" alt="Profile Picture"> 
+      <img src="images/rachel-phenix.png" alt="Profile Picture"> 
       <h1>Rachel Phenix</h1>
   </header>
   <nav>
