--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <h2>CIT 230 - Assignment Portal</h2>
     <ol>
-        <li>Lesson ##: <a href="#">Assignment Label</a></li>
+        <li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
       <li>future assignments</li>
     </ol>
   </main>
