--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>CIT 230 - Assignment Portal</h2>
     <ol>
         <li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
-      <li>future assignments</li>
+      <li>Future assignments</li>
     </ol>
   </main>
   <footer>
