--- a/assignments/Lesson-3/fixedhtml.html
+++ b/assignments/Lesson-3/fixedhtml.html
@@ -1,12 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE HTML> 
+<html lang="en-US">
   <head>
-      <title>Untitled Document</title>
+      <title> Lesson Three</title>
       <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
       <style>
           .style1 {margin: 0 auto; border: 1px solid #bbb; padding: 5px; background-color: #eee; line-height: 1.5em;}
       </style>
-      <link href="styles/main.css">     
+      <link rel="stylesheet" href="main.css">     
   </head>
   <div id="header">
   <div id="siteTitle">The Quad-Cities Transporation Center</div>
@@ -25,14 +25,14 @@
     </ul>
     </div>
 <div id="main">
-<div>
-    <img src="http://lorempixel.com/300/200/transport" width="300" height="200">
+</div>
+    <img src="http://lorempixel.com/300/200/transport" alt="picture" width="300" height="200">
     <h3>Featured Products & Services</h3>        
 <p></p>
  <ul>
   <li>Service One</li>
   <li>Service Two</li>
-  <li>Products</li>
+  <li>Products
     <ul><li>Product 1
     <li>Product 2</li>
     <li>Product 3</li></ul>
@@ -40,20 +40,20 @@
  <div class="style1 right">
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum urna dui. Ut imperdiet facilisis sapien. Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus. Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus. Cras velit leo, maximus et finibus a, molestie eget quam. 
  </div><br><br><br><br>
- <img src="http://lorempixel.com/300/200/transport"/>
+ <img src="http://lorempixel.com/300/200/transport" alt="picture1"/>
  <p>Locations
  <ol>
      <li><a HREF="http://www.clarkston.com/business-directory-2/">Clarkston Washington</a></li>
   <li><a href="http://www.lewiston.com/business-directory-2-2/">LEWISTON IDAHO</a></li>
-    <li><a href="http://www.moscow.com/business-directory-2/">Moscow ID</li>
+    <li><a href="http://www.moscow.com/business-directory-2/">Moscow ID</a></li> </ol>
  
-     <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee>
  <div id="footer">
-  <p>To find out more, contact Bobby at 4455.
+  <p>  Subscribe to our Newsletter to get daily specials emailed to you directly!! To find out more, contact Bobby at 4455.
  </p></div>
- <div id="footer">
-  <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p class="smaller">
+ <div id="footer1">
+  <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p>
  </div>
 
 </div>
 </body>
+</html>
