--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h2>CIT 230 - Assignment Portal</h2>
     <ol>
         <li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
+        <li>Lesson 4: <a href="town-template.html">Spot on Weather</a></li>
       <li>Future assignments</li>
     </ol>
   </main>
