--- a/town-template.html
+++ b/town-template.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-            <p><a href="assignments/lesson-4/websiteplanning.pdf">Weather Site Plan PDF</a></p>
+            <p><a href="websiteplanning.pdf">Weather Site Plan PDF</a></p>
          <img src="Linktologo" alt="logo"/>
         <h1>Spot On Weather</h1>
         <h2>Motto or catch phrase</h2>
