--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ol>
         <li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
         <li>Lesson 4: <a href="town-template.html">Spot on Weather</a></li>
+        <li>Lesson 5: <a href="preston-5.html">Spot on Weather</a></li>
       <li>Future assignments</li>
     </ol>
   </main>
