--- a/preston-5.html
+++ b/preston-5.html
@@ -4,7 +4,7 @@
 <head>
     <title>Weather Site</title>
     <meta charset="utf-8" /> 
-    <link href="small.css" type="text/css" rel="stylesheet" />
+    <link href="small-5.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
