--- a/preston-5.html
+++ b/preston-5.html
@@ -118,7 +118,7 @@
             </div>
             
         <div id="mapmap">
-        <img src="Linktomap" alt="map"/>
+        <img src="map-icon.jpeg" alt="map"/>
             </div>
             
             <div id="cit">
