--- a/preston-6.html
+++ b/preston-6.html
@@ -46,7 +46,8 @@
     <div id="centerr">
     <main>
         <h1>Preston</h1>
-            <img src="heroimage.JPG" alt="heropic">
+            <img src="franklinhigh.jpg" alt="heropic" 
+            srcset="franklinmed.jpg 2x, franklinlow.jpg 1x">
             <div id="sumone">
                 
             <section>
@@ -136,7 +137,10 @@
     </main>
   </div>
 
-    <footer>Footer Bar</footer>
+    <footer>
+            
+            <script type="text/javascript" src="currentdate.js"></script>
+    </footer>
 
 </body>
 
