--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li>Lesson 4: <a href="town-template.html">Spot on Weather</a></li>
         <li>Lesson 5: <a href="preston-5.html">Spot on Weather</a></li>
         <li>Lesson 6: <a href="preston-6.html">Responsive Design</a></li>
-        <li>Lesson 7: <a href="preston-7.html">CSS Flexible Boxes & Grid Layout</a></li>
+        <li>Lesson 7: <a href="preston-.html">CSS Flexible Boxes & Grid Layout</a></li>
+        <li>Lesson 8: <a href="preston-.html">CSS Flexible Boxes & Grid Layout</a></li>
       <li>Future assignments</li>
     </ol>
   </main>
