--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>Lesson 5: <a href="preston-5.html">Spot on Weather</a></li>
         <li>Lesson 6: <a href="preston-6.html">Responsive Design</a></li>
         <li>Lesson 7: <a href="preston-.html">CSS Flexible Boxes & Grid Layout</a></li>
-        <li>Lesson 8: <a href="preston-.html">CSS Flexible Boxes & Grid Layout</a></li>
+        <li>Lesson 8: <a href="preston-.html">Forms</a></li>
       <li>Future assignments</li>
     </ol>
   </main>
