--- a/index.html
+++ b/index.html
@@ -2,35 +2,34 @@
 <html lang="en-US">
 
 <head>
-  <title>CIT 230 Assignment Portal | Rachel W. Phenix | BYU-Idaho</title>
+    <title>CIT 230 Assignment Portal | Rachel W. Phenix | BYU-Idaho</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Portal page for Rachel's CIT 230 class at BYU Idaho">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
   <header>
-      <img src="images/rachel-phenix.png" alt="Profile Picture"> 
       <h1>Rachel Phenix</h1>
   </header>
   <nav>
-  </nav>
+      <h1>Assignment Portal</h1>
+       <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="http://www.byui.edu/online/">Link to BYUI Online Learning</a></li>
+           </ul>
+        </nav>
   <main>
-    <h2>CIT 230 - Assignment Portal</h2>
-    <ol>
-        <li>Lesson 3: <a href="fixedhtml.html">HTML Markup Validation Assignment</a></li>
-        <li>Lesson 4: <a href="town-template.html">Spot on Weather</a></li>
-        <li>Lesson 5: <a href="preston-5.html">Spot on Weather</a></li>
-        <li>Lesson 6: <a href="preston-6.html">Responsive Design</a></li>
-        <li>Lesson 7: <a href="preston-.html">CSS Flexible Boxes & Grid Layout</a></li>
-        <li>Lesson 8: <a href="preston-.html">Forms</a></li>
-      <li>Future assignments</li>
-    </ol>
+    <h1>Home</h1>
+    <img src="headshot.jpg" alt="Profile Picture"> 
+    <ul>
+        <li><a href="#">Lesson One</a></li>
+        <li><a href="#">Lesson Two</a></li>
+        <li><a href="#">Lesson Three</a></li>
+    </ul>
   </main>
   <footer>
-    <p>&copy; Rachel Weaver Phenix, North Carolina, 
-      <a href="http://www.byui.edu/online/"target="_blank">Link to BYUI Online Learning</a></p>
+    <p>&copy; Rachel Weaver Phenix | 2019 </p>
+    
   </footer>
     
   
