--- a/index123.html
+++ b/index123.html
@@ -4,7 +4,7 @@
 <head>
     <title>CIT 230 Assignment Portal | Rachel W. Phenix | BYU-Idaho</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="main123.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
