--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Home</h1>
     <img src="headshot.jpg" alt="Profile Picture"> 
     <ul>
-        <li><a href="#">Lesson One</a></li>
+            <li><a href="temple 1/index.html">Temple One</a></li>
         <li><a href="#">Lesson Two</a></li>
         <li><a href="#">Lesson Three</a></li>
     </ul>
