--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img src="headshot.jpg" alt="Profile Picture"> 
     <ul>
             <li><a href="templeone/">Temple One</a></li>
-        <li><a href="water_cycle/">Water Cycle</a></li>
+        <li><a href="design/">Design</a></li>
         <li><a href="#">Lesson Three</a></li>
     </ul>
   </main>
