--- a/design/index.html
+++ b/design/index.html
@@ -38,7 +38,7 @@
 <!-- NAVIGATION HERE -->
     <nav class="clearfix">
         <ul >
-            <li class="active"><a href="alignment.html">Alignment</a></li>
+            <li class="active"><a href="index.html">Alignment</a></li>
             <li><a href="typography.html">Typography</a></li>
             <li><a href="proximity.html">Proximity</a></li>
             <li><a href="repetition.html">Repetition</a></li>    
