--- a/design/contrast.html
+++ b/design/contrast.html
@@ -38,7 +38,7 @@
 <!-- NAVIGATION HERE -->
     <nav class="clearfix">
         <ul >
-           <li><a href="alignment.html">Alignment</a></li>
+           <li><a href="index.html">Alignment</a></li>
             <li><a href="typography.html">Typography</a></li>
             <li><a href="proximity.html">Proximity</a></li>
             <li><a href="repetition.html">Repetition</a></li>    
