--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <ul>
             <li><a href="templeone/">Temple One</a></li>
         <li><a href="design/index.html">Design</a></li>
-        <li><a href="#">Lesson Three</a></li>
+        <li><a href="fixedhtml.html">Fixed Html</a></li>
     </ul>
   </main>
   <footer>
