--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="templeone/">Temple One</a></li>
         <li><a href="design/index.html">Design</a></li>
         <li><a href="fixedhtml.html">Fixed Html</a></li>
+        <li><a href="lesson-4/Website Planning Doc.pdf">Website Planning Document</a></li>
     </ul>
   </main>
   <footer>
