--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="design/index.html">Design</a></li>
         <li><a href="fixedhtml.html">Fixed Html</a></li>
         <li><a href="lesson-4/Website Planning Doc.pdf">Website Planning Document</a></li>
+        <li><a href="lesson-4/index.html">Small home page</a></li>
     </ul>
   </main>
   <footer>
