--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="fixedhtml.html">Fixed Html</a></li>
         <li><a href="lesson-4/Website Planning Doc.pdf">Website Planning Document</a></li>
         <li><a href="lesson-4/index.html">Small home page</a></li>
+        <li><a href="lesson-5/index.html">Weather Build Week5</a></li>
     </ul>
   </main>
   <footer>
