--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="lesson-4/Website Planning Doc.pdf">Website Planning Document</a></li>
         <li><a href="lesson-4/index.html">Small home page</a></li>
         <li><a href="lesson-5/index.html">Weather Build Week5</a></li>
-        <li><a href="lesson-6/index.html">Weather Build- Responsive Design</a></li>
+        <li><a href="Lesson-6/index.html">Weather Build- Responsive Design</a></li>
     </ul>
   </main>
   <footer>
