--- a/Lesson-9/json.html
+++ b/Lesson-9/json.html
@@ -21,7 +21,7 @@
     <script>
     var header = document.querySelector('header');
     var section = document.querySelector('section');
-    var requestURL = 'https://raw.githubusercontent.com/wr368722/rachelphenix/master/json.json'; 
+    var requestURL = 'https://wr368722.github.io/rachelphenix/lesson-9/scripts/json.json';
       
     var request = new XMLHttpRequest();
     request.open('GET', requestURL);
