--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="lesson-5/index.html">Weather Build Week5</a></li>
         <li><a href="Lesson-6/index.html">Weather Build- Responsive Design</a></li>
         <li><a href="Lesson-6/index.html">Storm Center</a></li>
-        <li><a href="Lesson-9/index.html">JSON activity</a></li>
+        <li><a href="Lesson-9/json.html">JSON activity</a></li>
     </ul>
   </main>
   <footer>
