--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="Lesson-6/index.html">Weather Build- Responsive Design</a></li>
         <li><a href="Lesson-6/index.html">Storm Center</a></li>
         <li><a href="Lesson-9/json.html">JSON activity</a></li>
+        <li><a href="lesson-9p2/home.html">Town JSON Data</a></li>
     </ul>
   </main>
   <footer>
