--- a/lesson-9p2/index.html
+++ b/lesson-9p2/index.html
@@ -28,7 +28,7 @@
             <nav class="nav">
                 <ul>
                   <li>
-                    <a href="#">Home</a>
+                    <a href="home.html">Home</a>
                   </li>
                   <li class="active">
                     <a href="index.html">Preston</a>
